# peerplays

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.txt  Merge-Problems.txt  README.md  betting2-nhl  betting2-wimbledon  betting_simulator.html  bkup_CMakeCache.txt  genesis.json  multimarket_betting_simulator.html  peerplays_build.sh  rename_fc.sh  tgenesis.json
cmake/Hunter/: config.cmake
docker/: default_config.ini  peerplaysentry.sh
genesis/: genesis.json  genesis.py
libraries/: CMakeLists.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  config_util.cpp  database_api.cpp  impacted.cpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  affiliate_payout.cpp  asset_evaluator.cpp  asset_object.cpp  balance_evaluator.cpp  betting_market_evaluator.cpp  betting_market_group_object.cpp  betting_market_object.cpp  bitcoin_address_evaluator.cpp  bitcoin_transaction_evaluator.cpp  block_database.cpp  committee_member_evaluator.cpp  competitor_evaluator.cpp  confidential_evaluator.cpp  contract_evaluator.cpp  contract_object.cpp  database.cpp  db_balance.cpp  db_bet.cpp  db_block.cpp  db_debug.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_market.cpp  db_notify.cpp  db_sidechain.cpp  db_update.cpp  db_witness_schedule.cpp  evaluator.cpp  event_evaluator.cpp  event_group_evaluator.cpp  event_group_object.cpp  event_object.cpp  fork_database.cpp  game_object.cpp  genesis_state.cpp  (+24 more)
libraries/db/: CMakeLists.txt  index.cpp  object_database.cpp  undo_database.cpp
libraries/db/include/graphene/db/: flat_index.hpp  generic_index.hpp  index.hpp  object.hpp  object_database.hpp  object_id.hpp  simple_index.hpp  undo_database.hpp
libraries/deterministic_openssl_rand/: CMakeLists.txt  deterministic_openssl_rand.cpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
libraries/net/: CMakeLists.txt  message_oriented_connection.cpp  node.cpp  peer_connection.cpp  peer_database.cpp  stcp_socket.cpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/TestPlugin1/: plugin.json
libraries/plugins/TestPlugin2/: plugin.json
libraries/plugins/account_history/: account_history_plugin.cpp
libraries/plugins/account_history/include/graphene/account_history/: account_history_plugin.hpp
libraries/plugins/accounts_list/: CMakeLists.txt  accounts_list_plugin.cpp
libraries/plugins/accounts_list/include/graphene/accounts_list/: accounts_list_plugin.hpp
libraries/plugins/affiliate_stats/: CMakeLists.txt  affiliate_stats_api.cpp  affiliate_stats_plugin.cpp
libraries/plugins/affiliate_stats/include/graphene/affiliate_stats/: affiliate_stats_api.hpp  affiliate_stats_objects.hpp  affiliate_stats_plugin.hpp
libraries/plugins/bookie/: CMakeLists.txt  bookie_api.cpp  bookie_plugin.cpp
libraries/plugins/bookie/include/graphene/bookie/: bookie_api.hpp  bookie_objects.hpp  bookie_plugin.hpp
libraries/plugins/debug_witness/: debug_api.cpp  debug_witness.cpp
libraries/plugins/debug_witness/include/graphene/debug_witness/: debug_api.hpp  debug_witness.hpp
libraries/plugins/delayed_node/: delayed_node_plugin.cpp
libraries/plugins/generate_genesis/: CMakeLists.txt  generate_genesis.cpp
libraries/plugins/generate_genesis/include/graphene/generate_genesis/: generate_genesis.hpp  generate_genesis_plugin.hpp
libraries/plugins/generate_uia_sharedrop_genesis/: CMakeLists.txt  generate_uia_sharedrop_genesis.cpp
libraries/plugins/generate_uia_sharedrop_genesis/include/graphene/generate_uia_sharedrop_genesis/: generate_uia_sharedrop_genesis.hpp
libraries/plugins/market_history/: market_history_plugin.cpp
libraries/plugins/market_history/include/graphene/market_history/: market_history_plugin.hpp
libraries/plugins/peerplays_sidechain/: CMakeLists.txt  addresses.txt  bitcoin_utils.cpp  peerplays_sidechain_plugin.cpp  sidechain_net_handler.cpp  sidechain_net_handler_bitcoin.cpp  sidechain_net_manager.cpp
libraries/plugins/peerplays_sidechain/include/graphene/peerplays_sidechain/: bitcoin_utils.hpp  defs.hpp  peerplays_sidechain_plugin.hpp  sidechain_net_handler.hpp  sidechain_net_handler_bitcoin.hpp  sidechain_net_manager.hpp
libraries/plugins/snapshot/: snapshot.cpp
libraries/plugins/snapshot/include/graphene/snapshot/: snapshot.hpp
libraries/plugins/witness/: CMakeLists.txt  witness.cpp
libraries/plugins/witness/include/graphene/witness/: witness.hpp
libraries/sidechain/: CMakeLists.txt  bech32.cpp  bitcoin_address.cpp  bitcoin_script.cpp  bitcoin_transaction.cpp  btc_multisig_address.cpp  input_withdrawal_info.cpp  primary_wallet_vout_manager.cpp  segwit_addr.cpp  sidechain_condensing_tx.cpp  sidechain_proposal_checker.cpp  sign_bitcoin_transaction.cpp  utils.cpp
libraries/sidechain/network/: CMakeLists.txt  bitcoin_rpc_client.cpp  sidechain_net_manager.cpp  zmq_listener.cpp
libraries/sidechain/network/include/sidechain/network/: bitcoin_rpc_client.hpp  sidechain_net_manager.hpp  zmq_listener.hpp
libraries/time/: CMakeLists.txt  time.cpp
libraries/time/include/graphene/time/: time.hpp
libraries/utilities/: CMakeLists.txt  key_conversion.cpp  plugin_code_generator.py  (+1 more)
libraries/vms/: CMakeLists.txt  chain_adapter.cpp  chain_adapter.hpp  db_result.cpp  db_result.hpp  fee_gas.cpp  fee_gas.hpp  test_file.cpp  vm_executor.cpp  vm_executor.hpp  vm_interface.hpp
libraries/vms/evm/: CMakeLists.txt  evm.cpp  evm.hpp  evm_adapter.cpp  evm_adapter.hpp  evm_parameters.hpp  evm_result.hpp  pp_state.cpp  pp_state.hpp
libraries/vms/vms_base/: CMakeLists.txt  chain_adapter.hpp  vm_interface.hpp
libraries/vms/wavm/: CMakeLists.txt  pp_controller.cpp  pp_controller.hpp  test_file.hpp  wavm.cpp  wavm.hpp  wavm_adapter.cpp  wavm_adapter.hpp
programs/: CMakeLists.txt
programs/build_helpers/: CMakeLists.txt  cat-parts  check_reflect.py  member_enumerator.cpp
programs/witness_node/: CMakeLists.txt  bkup_config.ini  bkup_genesis.json  genesis.json  main.cpp
tests/: CMakeLists.txt  random.sh  tournaments.sh
(+309 files in other folders)
